# shupogaki

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
client/: Cargo.toml  assets.json  build.rs  index.html
client/assets/shaders/: face_mouth.wgsl
client/src/: collider.rs  main.rs  net.rs  web.rs
client/src/asset/: animation.rs  config.rs  locale.rs  material.rs  mesh.rs  mod.rs  model.rs  sound.rs  spawner.rs  sprite.rs  texture.rs  texture_atlas.rs
client/src/scene/: assets.rs  constants.rs  initialize.rs  mod.rs  option.rs  pause.rs  resources.rs  setup.rs  system.rs  types.rs  utils.rs
client/src/scene/in_game/: cleanup.rs  exit.rs  finished.rs  init_in_game.rs  init_result.rs  load.rs  main.rs  mod.rs  prepare.rs  resume.rs  start.rs  wrapup.rs
client/src/scene/result/: cleanup.rs  mod.rs  restart.rs  start.rs  start_to_end.rs
client/src/scene/title/: init.rs  init_rank.rs  init_title.rs  load.rs  main.rs  mod.rs  ranking.rs  to_in_game.rs
client/src/shader/: face_mouth.rs
docs/: index.html  shupogaki.js
docs/assets/animations/: Aoba.anim  Hikari_Cafe_Idle.anim  Hikari_InGame.anim  Hikari_Victory_End_Interaction.anim  Hikari_Victory_Start_Interaction.anim  Nozomi_Cafe_Idle.anim  Nozomi_InGame.anim  Nozomi_Victory_End_Interaction.anim  Nozomi_Victory_Start_Interaction.anim
docs/assets/fonts/: ImgFont_1.sprite  ImgFont_2.sprite  ImgFont_3.sprite  ImgFont_Best.sprite  ImgFont_Exit.sprite  ImgFont_Finish.sprite  ImgFont_New.sprite  ImgFont_Number.atlas  ImgFont_Number.sprite  ImgFont_Pause.sprite  ImgFont_Resume.sprite  ImgFont_Score.sprite  ImgFont_Start.sprite  ImgFont_Time.sprite
docs/assets/locale/: en.json  ja.json  ko.json
docs/assets/materials/: Barricade.material  CH0242_Body.material  CH0242_EyeMouth.material  CH0242_Eyebrow.material  CH0242_Face.material  CH0242_Hair.material  CH0242_Halo.material  CH0243_Body.material  CH0243_EyeMouth.material  CH0243_Eyebrow.material  CH0243_Face.material  CH0243_Hair.material  CH0243_Halo.material  CH0288_Body.material  CH0288_EyeMouth.material  CH0288_Eyebrow.material  CH0288_Face.material  CH0288_Hair.material  CH0288_Halo.material  CH0288_Prop.material  DangerZone.material  DoorBell_Body.material  DoorBell_Button.material  Fence_0.material  Fuel.material  Glow.material  Outline.material  Plane_0.material  Signlight_0.material  Signlight_1.material  Stone_0.material  Stone_1.material  Tok9Train.material  ToyTrain.material
docs/assets/meshes/: Barricade.mesh  BillBoard.mesh  CH0242_Body.mesh  CH0242_Halo.mesh  CH0243_Body.mesh  CH0243_Halo.mesh  CH0288_Bag_Outline.mesh  CH0288_Body.mesh  CH0288_Face_Outline.mesh  CH0288_Halo.mesh  DoorBell.mesh  Fence_0.mesh  Fuel.mesh  OL_DoorBell.mesh  OL_Fuel.mesh  Plane_0.mesh  Signlight_0.mesh  Signlight_1.mesh  Stone_0.mesh  Stone_1.mesh  Stone_2.mesh  ToyTrain00.mesh  ToyTrain01.mesh  ToyTrain02.mesh  Train_0.mesh  Train_1.mesh  Train_2.mesh  Train_3.mesh  Train_4.mesh  Train_5.mesh  Train_6.mesh
docs/assets/models/: Aoba.hierarchy  Barricade.hierarchy  DangerZone.hierarchy  DoorBell.hierarchy  Fuel.hierarchy  Glow.hierarchy  Hikari.hierarchy  Nozomi.hierarchy  Plane_0.hierarchy  Plane_999.hierarchy  Stone.hierarchy  Tok9Train00.hierarchy  Tok9Train01.hierarchy  ToyTrain00.hierarchy  (+2 more)
src/: collider.rs  gizmo.rs  main.rs
src/asset/: animation.rs  material.rs  mesh.rs  mod.rs  model.rs  sound.rs  spawner.rs  sprite.rs  texture.rs  texture_atlas.rs
src/scene/: generate.rs  in_game.rs  in_game_load.rs  initialize.rs  loading.rs  mod.rs  option.rs  pause.rs  prepare.rs  result_start.rs  resume.rs  setup.rs  wrap_up.rs
src/shader/: mod.rs
(+90 files in other folders)
