[package]
name = "shupogaki"
version = "0.1.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made endless runner game based on Blue Archive."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/shupogaki"
readme = "README.md"
publish = false

[profile.product]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
lazy_static = "1.5"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dependencies.bevy]
version = "0.16"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
no-debuging-log = []
no-debuging-gizmo = []
product-build = ["no-debuging-log", "no-debuging-gizmo"]
