[package]
name = "shupogaki"
version = "0.1.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made endless runner game based on Blue Archive."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/shupogaki"
readme = "README.md"
build = "build.rs"
publish = false

[build-dependencies]
aes-gcm = "0.10"
fs_extra = "1.3"
rand = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
bevy_simple_scroll_view = "0.4"
bevy_tweening = { version = "0.13", default-features = false, features = ["bevy_ui"] }
image = { version = "0.25", default-features = false, features = ["png"] }
lazy_static = "1.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"
thiserror = "2.0"

[dependencies.bevy]
version = "0.16"
features = ["shader_format_spirv"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioParam",
    "GainNode",
] }
js-sys = "0.3"

[features]
default = []
no-debuging-log = []
no-debuging-gizmo = []
no-debuging-player = []
no-debuging-assert = []
product-build = ["no-debuging-log", "no-debuging-gizmo", "no-debuging-player", "no-debuging-assert"]
